<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgv2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="gora2.jpg"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnOpenFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnOpenFile"
            android:text="@string/btnOpenFile" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCopy"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterCopy"
            android:text="@string/btnCopy" />

        <Button
            android:id="@+id/btnInvert"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterInvert"
            android:text="@string/btnInvert" />

        <Button
            android:id="@+id/btnGray"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterGray"
            android:text="@string/btnGray" />

        <Button
            android:id="@+id/btnBW"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterBlackAndWhite"
            android:text="@string/btnBW" />

        <Button
            android:id="@+id/btnLightening"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterLightening"
            android:text="@string/btnLightening" />

        <Button
            android:id="@+id/btnContrast"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="filterContrast"
            android:text="@string/btnContrast" />

        <Button
            android:id="@+id/btnRX"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reverseX"
            android:text="@string/btnRX" />

        <Button
            android:id="@+id/btnRY"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reverseY"
            android:text="@string/btnRY" />

    </LinearLayout>

</LinearLayout>